<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?android:attr/selectableItemBackground"
    android:descendantFocusability="blocksDescendants"
    android:minHeight="200dp"
    app:cardBackgroundColor="@color/blue"
    app:cardCornerRadius="7dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:strokeColor="@android:color/darker_gray"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="200dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/detail_job_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="right"
                android:minWidth="150dp"
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/add_job_name_hint" />

            <TextView
                android:id="@+id/job_detail_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="#000"
                tools:text="@string/add_job_name_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="right"
                android:minWidth="150dp"
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/detail_job_date_time" />

            <TextView
                android:id="@+id/job_detail_tv_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="5dp"
                tools:text="@string/detail_job_date_time" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="right"
                android:minWidth="150dp"
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/add_job_info_hint" />

            <TextView
                android:id="@+id/job_detail_tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="5dp"
                tools:text="@string/add_job_info_hint" />

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
